--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "navbar-fixed-side";
 
 
 
@@ -25,4 +26,28 @@ h1.error {
 
 h2.error {
 	margin-bottom: 10px;
+}
+
+li {
+	padding-left: 15px;
+}
+
+section {
+	padding:10px;
+	margin: 0px;
+	height: 100vh;
+}
+
+#home {
+	background-color: rgb(236, 200, 220);
+}
+
+#section1 {
+	background-color: rgb(236, 220, 200);
+}
+
+
+body, #content-body {
+	margin: 0px;
+	padding: 0px;
 }
