--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,11 @@
-<h2>Hello World!</h2>
-<p>
-	This is a new app. So much to Fill!
-</p>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<section id="home">
+  <h2>Hello World!</h2>
+  <p>This is a new app. So much to Fill!</p>
+  <p>The time is now: <%= Time.now %></p>
+</section>
+
+
+
+<section id="section1">
+  <h2>Section 1</h2>
+</section>
