--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,34 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default navbar-fixed-top navbar-fixed-side">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <a class="navbar-brand" href="/">MyWeb</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active menu-home"><a href="/" id="a-menu-home">Home</a></li>
+            <li class="menu-section1"><a href="#section1" id="a-menu-section1">Section 1</a></li> 
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid" id="content-body">
+      <%= yield %>
+    </div>
+  </body>
+
+
+
+<!--   <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-lg-2">
@@ -26,9 +54,8 @@
           </nav>
         </div>
         <div class="col-sm-9 col-lg-10" id="content-body">
-          <%= yield %>
         </div>
       </div>
     </div>
-  </body>
+  </body> -->
 </html>
