--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,7 @@
   <h2>Hello World!</h2>
   <p>This is a new app. So much to Fill!</p>
   <p>The time is now: <%= Time.now %></p>
+  <p>Scroll Down to see navbar</p>
 </section>
 
 
