--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,59 +18,78 @@
 @import "navbar-fixed-side";
 
 
+// Mainpage wrapping elements
+div {
+	#content-body {
+		margin: 0px;
+		padding: 0px;
+	}
 
+	.content-block {
+		margin: 0px;
+		background-color: rgb(236, 220, 200);
+		padding: 0px 0px 0px 200px;
+	}
 
-h1.error {
-	font-size: 100px;
+	.content-block-home {
+		margin: 0px;
+		padding: 0px;
+		background-color: rgb(236, 200, 220);
+	}
 }
-
-h2.error {
-	margin-bottom: 10px;
-}
-
-li {
-	padding-left: 15px;
-}
-
-section {
-	padding:10px;
-	margin: 0px;
-	height: 100vh;
-}
-
-#home {
-	background-color: rgb(236, 200, 220);
-}
-
-#section1 {
-	background-color: rgb(236, 220, 200);
-	padding-left: 320px;
-}
-
 
 body {
 	margin: 0px;
 	padding: 0px;
 }
 
-#content-body {
+
+
+
+
+
+// Mainpage section blocks
+section {
+	padding: 15px;
 	margin: 0px;
-	padding: 0px;
+	min-height: 500px;
+}
+
+section#home {
+	height: 100vh;
+}
+
+section#about {
+	height: 100vh;
+	background-color: rgb(186, 234, 244);
 }
 
 
+
+
+
+// Bootstrap Navbar
 .navbar-fixed-side {
-	width: 300px;
+	width: 200px;
 	margin: 0px;
 }
 
+ul.nav > li {
+	padding-left: 15px;
+}
 
+
+
+
+
+
+// Dynamic scaling
 @media (max-width: 767px) {
 	.navbar-fixed-side {
 		width: 100%;
 	}
 
-	#section1 {
-		padding-left: 20px;
+	div.content-block {
+		padding: 0px;
 	}
 }
