--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,49 @@
-<section id="home">
-  <h2>Hello World!</h2>
-  <p>This is a new app. So much to Fill!</p>
-  <p>The time is now: <%= Time.now %></p>
-  <p>Scroll Down to see navbar</p>
-</section>
+<!-- Home section -->
+<div class="content-block-home">
+  <section id="home">
+    <h2>Hello World!</h2>
+    <p>This is a new app. So much to Fill!</p>
+    <p>The time is now: <%= Time.now %></p>
+    <p>Scroll Down to see navbar</p>
+  </section>
+</div>
+
+
+<!-- Section1 -->
+<div class="content-block">
+  <section id="section1">
+    <h2>Section 1</h2>
+    <div class="alert alert-warning alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <p id="log">log goes here</p>
+    </div>
+  </section>
+</div>
+
+
+<!-- Section2 -->
+<div class="content-block">
+  <section id="section2">
+    <h2>Section 2</h2>
+  </section>
+</div>
+
+
+<!-- Section3 -->
+<div class="content-block">
+  <section id="section3">
+    <h2>Section 3</h2>
+  </section>
+</div>
 
 
 
-<section id="section1">
-  <h2>Section 1</h2>
-</section>
+
+<!-- Author bio -->
+<div class="content-block">
+  <section id="section-about">
+    <h2>About</h2>
+  </section>
+</div>
+
+
