--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,11 @@
     <div class="container-fluid" id="content-body">
       <%= yield %>
     </div>
+
+
+    <div class="alert alert-warning" role="alert" id="alert-box">
+      <strong>Warning!</strong> Javascript Disabled!
+    </div>
   </body>
 </html>
 
