--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Home section -->
-<div class="content-block-home">
-  <section id="home">
+<div class="content-block content-block-home">
+  <section class="section-block section-block-home" id="home">
     <h2>Hello World!</h2>
     <p>This is a new app. So much to Fill!</p>
     <p>The time is now: <%= Time.now %></p>
@@ -11,19 +11,15 @@
 
 <!-- Section1 -->
 <div class="content-block">
-  <section id="section1">
+  <section class="section-block" id="section1">
     <h2>Section 1</h2>
-    <div class="alert alert-warning alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <p id="log">log goes here</p>
-    </div>
   </section>
 </div>
 
 
 <!-- Section2 -->
 <div class="content-block">
-  <section id="section2">
+  <section class="section-block" id="section2">
     <h2>Section 2</h2>
   </section>
 </div>
@@ -31,7 +27,7 @@
 
 <!-- Section3 -->
 <div class="content-block">
-  <section id="section3">
+  <section class="section-block" id="section3">
     <h2>Section 3</h2>
   </section>
 </div>
@@ -41,9 +37,28 @@
 
 <!-- Author bio -->
 <div class="content-block">
-  <section id="section-about">
-    <h2>About</h2>
+  <section class="section-block" id="section-about">
+    <div class="container">
+      <div class="row">
+        <h2>About</h2>
+        <button class="btn btn-primary" id='button-leave-message'>Leave a message</button>
+        <button class="btn btn-warning btn-left-margin" id='button-review-message'>
+          Review your messsages <span class="badge" id="comment-badge"><%= @comment_count %></span>
+        </button>
+
+      </div>
+      <div class="row" id="add-comment-form">
+        <%= render :partial => '/comments/form' %>
+      </div>
+      <div class="row" id="comment-list">
+        <% @comments.each do |comment| %>
+          <%= render :partial => '/comments/show', :locals => { :comment => comment } %>
+        <% end %>
+      </div>
+    </div>
+
   </section>
+
 </div>
 
 
