--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@
  *
  */
 
-
+@import "colors";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "navbar-fixed-side";
@@ -23,18 +23,19 @@ div {
 	#content-body {
 		margin: 0px;
 		padding: 0px;
+		background-color: red;
 	}
 
 	.content-block {
 		margin: 0px;
-		background-color: rgb(236, 220, 200);
+		background-color: $metro-orange;
 		padding: 0px 0px 0px 200px;
 	}
 
 	.content-block-home {
 		margin: 0px;
 		padding: 0px;
-		background-color: rgb(236, 200, 220);
+		background-color: $metro-light-gray;
 	}
 }
 
@@ -65,17 +66,24 @@ section#home {
 
 }
 
+section#section2 {
+	background-color: $metro-sea;
+}
+
+section#section3 {
+	background-color: $metro-light-gray;
+}
+
+
 section#section-about {
 	min-height: 100vh;
-	background-color: rgb(186, 234, 244);
+	background-color: $metro-light-grass;
 }
 
 section > div.container {
 	margin: 0;
+	width: 100%;
 }
-
-
-
 
 
 
@@ -87,8 +95,14 @@ section > div.container {
 	margin: 0px;
 }
 
-ul.nav > li {
-	padding-left: 15px;
+.btn-primary:focus {
+	background-color: $btn-primary-bg;
+	border-color: $btn-primary-border;
+}
+
+.btn-warning:focus {
+	background-color: $btn-warning-bg;
+	border-color: $btn-warning-border;
 }
 
 
@@ -116,17 +130,27 @@ ul.nav > li {
 
 
 
+
 // Misc
-#comment-list {
-	margin-top: 50px;
+.comment-container {
+	width: 100%;
+}
+.panel {
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+.comment-username {
+	font-size: medium;
+}
+.comment-date {
+	font-size: small;
+	color: $gray-font;
 }
 
-#add-comment-form {
-	margin-top: 50px;
+
+.left-side, .right-side {
+	background-color: $metro-dark-orange;
 }
-
-
-
 
 
 
