--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -25,9 +25,9 @@
     <textarea class="form-control" id="form-element-comment" placeholder="comment" name="comment[body]" rows="3" required></textarea>
   </div>
 
-  <div class="row">
+  <div class="pull-right">
     <%= hidden_field_tag "comment[ip_address]", request.remote_ip %> 
-    <div class="actions pull-right top-pad-25">
+    <div class="actions">
       <%= f.submit 'Submit', :class => 'btn btn-primary button-submit-comment' %>
       <%= button_tag "Cancel", type: :reset,  :class => 'btn btn-primary btn-left-margin', :id => "button-cancel-message" %>
     </div>
