--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,4 +1,4 @@
-<li class="list-group-item comment-container">
+<li class="list-group-item comment-container" style="background-color: transparent">
   <div class="container-fluid">
     <div class="row">
 
