--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,11 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/" class="navbar-item-link">Home</a></li>
-            <li><a href="#section1" class="navbar-item-link">Section 1</a></li>
-            <li><a href="#section2" class="navbar-item-link">Section 2</a></li> 
-            <li><a href="#section3" class="navbar-item-link">Section 3</a></li>
-            <li><a href="#section-about" class="navbar-item-link">About</a></li>  
+            <li><a href="#section1" class="navbar-item-link">Web Applications</a></li>
+            <li><a href="#section2" class="navbar-item-link">Android and Windows</a></li> 
+            <li><a href="#section3" class="navbar-item-link">Other Projects</a></li>
+            <li><a href="#section4" class="navbar-item-link">Interests</a></li>
+            <li><a href="#section-about" class="navbar-item-link">About Me</a></li>  
           </ul>
         </div>
       </div>
